# pytricks

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  venv_script.sh
doc/: README.md  debugger_tips.md
doc/tutorials/: argparse.md  class.md  cuda.md  dict.md  file_io.md  image.md  ipython_magic_functions.md  list.md  matplotlib.md  numpy.md  object_storage.md  pandas.md  pathlib.md  pdf.md  textwrap.md  torch_basics.md  torch_models.md  torch_tips.md  torch_vision.md  typing.md  wandb.md
