[metadata]
name = table_extraction
description = table extraction project
long_description = file: README.md
author = Q. Nguyen, J. Bocage
version = 1.0.11


[options]
packages =
    find:
include_package_data=True

install_requires =
    pdf2image>=1.14.0
    PyMuPDF>=1.18.13
    PyPDF2>=1.26.0
    pytesseract>=0.3.6
    wheel
python_requires = >=3.6
zip_safe = no

[options.extras_require]
complete =
    opencv-python>=4.5.1.48
    scikit-image>=0.19.1
